--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 9th, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 10th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            Do you have a favorite sport (either to watch or to play)? 
-                            If so, what is it?
+                            If you had to live without one of the five senses,
+                            which would you pick?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space">
                         <img 
-                            src="images/fantasy-football.webp"
-                            alt="fantasy football"
+                            src="images/three-monkeys.jpeg"
+                            alt="three monkeys"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EVAL</span></li>
-                        <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                        <li><span class="type">PRESENTATIONS</span></li>
                     </ul>
                 </div>
 
@@ -34,24 +33,23 @@
                     <div class="wrapper">
                         <h3>Announcements (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-8:30pm)</h3>
+                        <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EVAL</span></li>
-                        <!-- </ul>
+                            <li><span class="type">Presentations</span>Julia, Kieran, Marc, Edalih</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li> -->
+                            <li><span class="type">Presentations</span>Lorvens, Noah, Luisell, Ly</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (9:15pm-11pm)</h3>
+                        <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Presentation</span>Olivia's Restaurant Site</li>
-                            <li><span class="type">Project</span>Restaurant Site (Complete)</li>
+                            <li><span class="type">Lab Time</span>Restaurant Site Critique Feedback</li>
                         </ul>
                     </div>
                 </div>
