--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,28 +7,25 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 13th, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 14th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            The time for studying is over; now is the time for action!
-                            <br><br>
-                            You guys got this! Good luck!
+                            What is skill that you wish you could be better at?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/owl.webp"
-                            alt="owl"
+                            src="images/lab-experiment.webp"
+                            alt="overthinking fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">FINAL EXAM</span></li>
-                        <li><span class="type">Exercise</span>JavaScript Function Game</li>
-                        <li><span class="type">ALL REMAINING CODING ASSIGNMENTS</span></li>
+                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                        <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                     </ul>
                 </div>
 
@@ -36,24 +33,24 @@
                     <div class="wrapper">
                         <h3>Announcements (6pm-6:10pm)</h3>
 
-                        <h3>Period 1 (6:10pm-8:30pm)</h3>
+                        <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">FINAL EXAM</span></li>
-                        <!-- </ul>
+                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Presentations</span>Lorvens, Noah, Luisell, Ly</li>
-                        </ul> -->
+                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                        </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 2 (9:15pm-11pm)</h3>
+                        <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>JavaScript Functions</li>
-                            <li><span class="type">Exercise</span>JavaScript Function Game</li>
+                            <li><span class="type">PowerPoint</span>Cover Letter</li>
+                            <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
                         </ul>
                     </div>
                 </div>
