--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,25 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 14th, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 15th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is skill that you wish you could be better at?
+                            What is a character trait that you admire in other people?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-experiment.webp"
-                            alt="overthinking fox"
+                            src="images/impressive.webp"
+                            alt="vader impressive"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
-                        <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                        <li><span class="type">Project</span>Personal Branding Statement</li>
                     </ul>
                 </div>
 
@@ -35,22 +36,25 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Careers in Graphic Design</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Careers in Graphic Design Discussion</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
+                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Cover Letter</li>
-                            <li><span class="type">Project</span>Career Search - Cover Letter Practice</li>
+                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
+                            <li><span class="type">Project</span>Personal Branding Statement</li>
                         </ul>
                     </div>
                 </div>
