--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 16th, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 17th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            What is a character trait or behavior 
-                            that you really dislike in other people?
+                            If you had to pick one word to describe yourself,
+                            what would you pick?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/emperor.webp"
+                            src="images/overthinking.webp"
                             alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Brand Inspiration Board</li>
-                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                        <li><span class="type">Project</span>Creative Resume</li>
                     </ul>
                 </div>
 
@@ -36,8 +36,8 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Brand Inspiration Board</li>
-                            <li><span class="type">COURSE EVALUATION SURVEY</span></li>
+                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
+                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
 
                         </ul>
                     </div>
@@ -45,15 +45,14 @@
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                            <li><span class="type">Project</span>Creative Resume</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
-                            <li><span class="type">Exercise</span>Creative Resume Sketches (?)</li>
+                            <li><span class="type">Project</span>Creative Resume [cont.]</li>
                         </ul>
                     </div>
                 </div>
