--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -7,26 +7,26 @@
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 17th, 2024</h1>
+            <h1>GDWD 105 - Agenda for May 20th, 2024</h1>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            If you had to pick one word to describe yourself,
-                            what would you pick?
+                            How do you feel about coding and web design
+                            now that the class is over?
                         </li>
                     </ul>
                     <div class="img-container more-space">
                         <img 
-                            src="images/overthinking.webp"
-                            alt="emperor hate"
+                            src="images/finalday.jpg"
+                            alt="final day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
-                        <li><span class="type">Project</span>Creative Resume</li>
+                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
                     </ul>
                 </div>
 
@@ -36,8 +36,7 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
-                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
 
                         </ul>
                     </div>
@@ -45,14 +44,14 @@
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Creative Resume</li>
+                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (9:15pm-11pm)</h3>
+                        <h3>Period 3 (9:15pm-10:30pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Creative Resume [cont.]</li>
+                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
                         </ul>
                     </div>
                 </div>
