--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -34,7 +34,7 @@
                 <div id="agenda">
                     <h2>Schedule</h2>
                     <div class="wrapper">
-                        <h3>Introductions (9am-9:10am)</h3>
+                        <h3>Announcements (9am-9:10am)</h3>
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
