--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -39,7 +39,7 @@
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
                             <li><span class="type">Exercise</span>Basic HTML Drills</li>
-                            <li><span class="type">Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">Self-Demo</span>HTML Lists | Parent/Child Relationships</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
