--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,26 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 4th</h1>
-            <h3>Week 20 (Intro to HTML) Day 3</h3>
+            <h1>GDWD 105 - Agenda for June 5th</h1>
+            <h3>Week 20 (Intro to HTML) Day 4</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            <li>What is your favorite snack food/dessert?</li>
+                            <li>What is your favorite genre of story to read?</li>
                         </li>
                     </ul>
                     <div class="img-container">
                         <img 
-                            src="images/snacks.webp"
-                            alt="snack panda"
+                            src="images/books_happy_place.jpg"
+                            alt="books happy place"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Basic HTML Drills</li>
                         <li><span class="type">Exercise</span>Wiki Page</li>
+                        <li><span class="type">Exercise</span>Recipe Page</li>
                     </ul>
                 </div>
 
@@ -38,24 +38,22 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Basic HTML Drills</li>
-                            <li><span class="type">Self-Demo</span>HTML Lists | Parent/Child Relationships</li>
+                            <li><span class="type">PowerPoint</span>Clean Code - Part 2</li>
+                            <li><span class="type">Exercise</span>Wiki Page</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>HTML Attributes</li>
-                            <li><span class="type">Demo</span>HTML Images</li>
+                            <li><span class="type">Demo</span>HTML Anchors (Links)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Clean Code - Part 2</li>
-                            <li><span class="type">Exercise</span>Wiki Page</li>
+                            <li><span class="type">Exercise</span>Recipe Page</li>
                         </ul>
                     </div>
                 </div>
