--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,23 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 6th</h1>
-            <h3>Week 20 (Intro to HTML) Day 5</h3>
+            <h1>GDWD 105 - Agenda for June 7th</h1>
+            <h3>Week 21 (Intro to HTML) Day 1</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What is one of your favorite TV series/anime?</li>
+                        <li>What do you think of HTML so far?</li>
                     </ul>
-                    <div class="img-container more-space-offset">
+                    <div class="img-container more-space dark-gray">
                         <img 
-                            src="images/tv.webp"
-                            alt="tv"
+                            src="images/lab-attire.webp"
+                            alt="lab in lab attire"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>HTML Potluck</li>
+                        <li><span class="type">N/A</span></li>
                     </ul>
                 </div>
 
@@ -35,22 +35,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Kahoots</span>Indentation Review</li>
-                            <li><span class="type">Project</span>HTML Potluck</li>
+                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (cont.)</li>
+                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>HTML Potluck (cont.)</li>
+                            <li><span class="type">Lab Time</span>Study for Quiz</li>
                         </ul>
                     </div>
                 </div>
