--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,23 +8,24 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for June 7th</h1>
+            <h1>GDWD 105 - Agenda for June 10th</h1>
             <h3>Week 21 (Intro to HTML) Day 1</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
-                        <li>What do you think of HTML so far?</li>
+                        <li>What is your favorite color?</li>
                     </ul>
-                    <div class="img-container more-space dark-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/lab-attire.webp"
-                            alt="lab in lab attire"
+                            src="images/painter-fox.jpg"
+                            alt="painter fox"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">N/A</span></li>
+                        <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                        <li><span class="type">Exercise</span>Color Palettes</li>
                     </ul>
                 </div>
 
@@ -35,21 +36,23 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Assignment Feedback</li>
+                            <li><span class="type">Quiz</span>HTML Fundamentals</li>
+                            <li><span class="type">PowerPoints</span>Intro to CSS and CSS Properties</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>HTML Potluck - Other Options</li>
+                            <li><span class="type">Demo</span>CSS Colors and Text Styling</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Study for Quiz</li>
+                            <li><span class="type">Exercise</span>Basic CSS Drills</li>
+                            <li><span class="type">Exercise</span>Color Palettes</li>
                         </ul>
                     </div>
                 </div>
