--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -36,6 +36,7 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
+                            <li><span class="type">Kahoot</span>Basic CSS Grid Review</li>
                             <li><span class="type">Exercise</span>MeTube (cont.)</li>
                         </ul>
                     </div>
