--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -35,7 +35,7 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Page Layout Exercises/Project</li>
+                            <li><span class="type">Lab Time</span>Page Layout Exercises & Project</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
