--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -50,7 +50,7 @@
                         <ul>
                             <li><span class="type">Exercise</span>Flexbox Drills - Part 2</li>
                             <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic">Navbars - Basic</a>
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic" target="_blank">Navbars - Basic</a>
                             </li>
                         </ul>
                     </div>
@@ -59,7 +59,7 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li><span class="type">Demo</span>
-                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic">Navbars - Basic</a> (cont.)
+                                <a href="https://first-gdwd.github.io/cookbook/demos.html#navbars-basic" target="_blank">Navbars - Basic</a> (cont.)
                             </li>
                             <li><span class="type">Exercise</span>Client Navbars (?)</li>
                         </ul>
