strays and missing tags; visual indentation

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -10,6 +10,10 @@
         <textarea id="html-input"></textarea>
         <button id="submit">SUBMIT</button>
 
+            <!-- 
+        This is a comment 
+             
+            -->
         <div id="layout">
             <div id="rawInput"></div>
             <div id="cleanedInput"></div>
