--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,25 +8,25 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 15th</h1>
-            <h3>Week 26 Day 1 (FINALS WEEK)</h3>
+            <h1>GDWD 105 - Agenda for July 16th</h1>
+            <h3>Week 26 Day 2 (FINALS WEEK)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            Would you rather be very smart or very strong?
+                            Are you able to nap during the day?
                         </li>
                     </ul>
-                    <div class="img-container more-space dark-blue-gray">
+                    <div class="img-container">
                         <img 
-                            src="images/buns-of-steel.webp"
-                            alt="buns of steel"
+                            src="images/rest-day.jpeg"
+                            alt="rest day"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
+                        <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
                     </ul>
                 </div>
 
@@ -37,22 +37,21 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">Quiz</span>Navigation and Responsiveness</li>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page)</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page)</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Home Page) [cont.]</li>
+                            <li><span class="type">Exercise</span>Restaurant Site Checkpoint (Menu Page) [cont.]</li>
                         </ul>
                     </div>
                 </div>
