--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -52,7 +52,7 @@
                     <div class="wrapper">
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
-                            <li><span class="type">Lab Time</span>Restaurant Site Feedback</li>
+                            <li><span class="type">Lab Time</span>Restaurant Site Feedback / Study for Final Exam</li>
                         </ul>
                     </div>
                 </div>
