added ids and fixed heading content

--- a/cookbook/recipes-cheatsheet.html
+++ b/cookbook/recipes-cheatsheet.html
@@ -82,7 +82,7 @@
             <h2>Legend</h2>
             <div class="legend container">Container</div>
             <div class="legend item">Item</div>
-            <h2>Side by Side Layout Options</h2>
+            <h2 id="side-by-side">Side by Side Layout Options</h2>
             <h4>Inline-Block</h4>
             <div>
                 <div class="item inline-block">
@@ -137,7 +137,7 @@
                 </div>
             </div>
 
-            <h2>Center Alignment Options</h2>
+            <h2 id="center-alignment">Center Alignment Options</h2>
             <h4>Text-Align</h4>
             <div class="container">
                 <div class="code">
@@ -186,7 +186,9 @@
                 </div>
             </div>
 
-            <h2>Single Column Centered Layout Options</h2>
+            <h2 id="centered-single-column">
+                Centered Single Column Layout Options
+            </h2>
             <h4>Margin Auto</h4>
             <div class="container">
                 <div class="item column-centered">
@@ -233,7 +235,7 @@
                     </div>
                 </div>
             </div>
-            <h4>Custom Positioning (recommended only for large containers like heroes)</h4>
+            <h4 id="positioning">Custom Positioning (recommended only for large containers like heroes)</h4>
             <div class="container">
                 <div class="code">
                     position: relative;
