more dirty code checks, and started added messages

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" alt="and lots of other stuff">
         <title>HTML Checker</title>
         <link href="css/html-checker.css" rel="stylesheet">
     </head>
@@ -14,11 +14,14 @@
         This is a comment 
              
             -->
-        <div id="layout">
-            <div id="rawInput"></div>
+        <diV 
+            id="layout"
+          >
+                <div id="rawInput"></DIV>
             <div id="cleanedInput"></div>
-        </div>
+    </div>
+
 
         <script src="js/html-checker.js"></script>
-    </body>
+    </boDy>
 </html>
