--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -8,26 +8,28 @@
     <body>
         
         <div id="layout">
-            <h1>GDWD 105 - Agenda for July 23rd</h1>
-            <h3>Week 27 Day 2 (Career Development Week)</h3>
+            <h1>GDWD 105 - Agenda for July 24th</h1>
+            <h3>Week 27 Day 3 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait that you admire in other people?
+                            What is a character trait or behavior 
+                            that you really dislike in other people?
                         </li>
                     </ul>
-                    <div class="img-container">
+                    <div class="img-container more-space black">
                         <img 
-                            src="images/impressive.webp"
-                            alt="vader impressive"
+                            src="images/emperor.webp"
+                            alt="emperor hate"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
-                        <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                        <li><span class="type">Exercise</span>Brand Inspiration Board</li>
+                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
                     </ul>
                 </div>
 
@@ -38,16 +40,17 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research I Discussion</li>
+                            <li><span class="type">COURSE EVALUATION SURVEY</span></li>
+                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Board</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Personal Branding [cont.]</li>
-                            <li><span class="type">Exercise</span>Personal Branding Research II Discussion</li>
+                            <li><span class="type">Exercise</span>Brand Inspiration Board [cont.]</li>
+                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -55,8 +58,7 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li>
-                                <span class="type">Guest Speaker</span>
-                                <a href="https://colbyclites.com/" target="_blank">Colby Clites</a>
+                                <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
                             </li>
                         </ul>
                     </div>
