start of matching tag highlights

--- a/cookbook/html-checker.html
+++ b/cookbook/html-checker.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0" alt="and lots of other stuff">
-        <title>HTML Checker</title>
+        <title>HTML Dirty Code Report</title>
         <link href="css/html-checker.css" rel="stylesheet">
     </head>
     <body>
