--- a/agenda_ryanreid_day.html
+++ b/agenda_ryanreid_day.html
@@ -15,21 +15,20 @@
                     <h2>Warm-up Question</h2>
                     <ul>
                         <li>
-                            What is a character trait or behavior 
-                            that you really dislike in other people?
+                            If you had to pick one word to describe yourself,
+                            what would you pick?
                         </li>
                     </ul>
-                    <div class="img-container more-space black">
+                    <div class="img-container more-space dark-blue">
                         <img 
-                            src="images/emperor.webp"
-                            alt="emperor hate"
+                            src="images/overthinking.webp"
+                            alt="overthinking bunny"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Exercise</span>Personal Brand Statement</li>
-                        <li><span class="type">Exercise</span>Brand Inspiration Board</li>
-                        <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                        <li><span class="type">Exercise</span>Creative Resume Sketches</li>
+                        <li><span class="type">Project</span>Creative Resume</li>
                     </ul>
                 </div>
 
@@ -40,17 +39,15 @@
 
                         <h3>Period 1 (9:10am-10:20am)</h3>
                         <ul>
-                            <li><span class="type">COURSE EVALUATION SURVEY</span></li>
-                            <li><span class="type">Exercise</span>Personal Brand Statement</li>
-                            <li><span class="type">Exercise</span>Brand Inspiration Board</li>
+                            <li><span class="type">PowerPoint</span>Career Development Tips Refresher</li>
+                            <li><span class="type">Exercise</span>Creative Resume Sketches</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (10:30am-12pm)</h3>
                         <ul>
-                            <li><span class="type">Exercise</span>Brand Inspiration Board [cont.]</li>
-                            <li><span class="type">Project</span>Personal Brand Style Guide</li>
+                            <li><span class="type">Project</span>Creative Resume</li>
                         </ul>
                     </div>
                     <h3 class="centered">Lunch Break (45min)</h3>
@@ -58,7 +55,7 @@
                         <h3>Period 3 (12:45pm-2pm)</h3>
                         <ul>
                             <li>
-                                <li><span class="type">Project</span>Personal Brand Style Guide [cont.]</li>
+                                <li><span class="type">Project</span>Creative Resume [cont.]</li>
                             </li>
                         </ul>
                     </div>
