--- a/agenda_ryanreid.html
+++ b/agenda_ryanreid.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html lang="en-US">
     <head>
-        <title>GDWD 105 AGENDA (2018 Cohort)</title>
+        <title>GDWD 108 AGENDA (2018 Cohort)</title>
         <meta name="description" content="Here's what we're doing in class today!">
         <link href="css/agenda.css" rel="stylesheet">
     </head>
     <body>
         <div id="layout">
-            <h1>GDWD 105 - Agenda for May 20th, 2024</h1>
+            <h1>GDWD 108 - Agenda for July 29th, 2024</h1>
+            <h3>Week 37 Day 3 (Career Development Week)</h3>
             <div id="flex-container">
                 <div id="assignments">
                     <h2>Attendance Question</h2>
                     <ul>
                         <li>
-                            How do you feel about coding and web design
-                            now that the class is over?
+                            What event are you most excited about in the Olympics?
+                            <br><br>
+                            Or, if you don't care much about the Olympics, 
+                            what event could be added to make you more interested?
                         </li>
                     </ul>
-                    <div class="img-container more-space">
+                    <div class="img-container more-space black">
                         <img 
-                            src="images/finalday.jpg"
-                            alt="final day"
+                            src="images/triathlete.jpg"
+                            alt="panda triathlete"
                         >
                     </div>
                     <h2>Deliverables for Today</h2>
                     <ul>
-                        <li><span class="type">Project</span>Freelancing I: Proposals</li>
-                        <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                        <li><span class="type">Exercise</span>Linkedin Review</li>
+                        <li><span class="type">Project (20%)</span>Interview Question Prep</li>
+                        <li><span class="type">Exercise</span>Resume Submission: Instructor Feedback</li>
                     </ul>
                 </div>
 
@@ -36,22 +40,21 @@
 
                         <h3>Period 1 (6:10pm-7:10pm)</h3>
                         <ul>
-                            <li><span class="type">PowerPoint</span>Freelancing & Invoicing</li>
-
+                            <li><span class="type">Exercise</span>Linkedin Review</li>
                         </ul>
                     </div>
                     <h3 class="centered">Small Break (10min)</h3>
                     <div class="wrapper">
                         <h3>Period 2 (7:20pm-8:30pm)</h3>
-                        <ul>
-                            <li><span class="type">Project</span>Freelancing I: Proposals</li>
+                        <ul> 
+                            <li><span class="type">Project (20%)</span>Interview Question Prep</li>
                         </ul>
                     </div>
                     <h3 class="centered">Dinner Break (45min)</h3>
                     <div class="wrapper">
-                        <h3>Period 3 (9:15pm-10:30pm)</h3>
+                        <h3>Period 3 (9:15pm-11pm)</h3>
                         <ul>
-                            <li><span class="type">Project</span>Freelancing II: Invoices</li>
+                            <li><span class="type">Exercise</span>Resume Submission: Instructor Feedback</li>
                         </ul>
                     </div>
                 </div>
